update password reset functionality and property
